--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>Soulprints</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/"> <!-- ✅ ADD THIS LINE -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&amp;display=swap" rel="stylesheet">
  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#f5f2f1">
 
 </head>
