--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#f5f2f1">
+  <meta name="robots" content="noindex, nofollow">
+
 
 </head>
 <body>
